--- a/src/app/pages/list/list.page.html
+++ b/src/app/pages/list/list.page.html
@@ -12,17 +12,7 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let item of loadedAlbums">
-      <ion-card>
-          <ion-card-header>
-              <ion-img [src]="item.thumbnailUrl"></ion-img>
-          </ion-card-header>
-            
-          <ion-card-content>
-              <ion-card-title>{{item.title}}</ion-card-title>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-          </ion-card-content>
-      </ion-card>
+      <app-card [data]="item"></app-card>
     </ion-item>
   </ion-list>
 
