--- a/src/app/pages/list/components/card/card.component.html
+++ b/src/app/pages/list/components/card/card.component.html
@@ -1,11 +1,15 @@
 <ion-card>
     <ion-card-header>
-        <ion-img [src]="data.thumbnailUrl"></ion-img>
+        <ion-img *ngIf="data" [src]="data.thumbnailUrl"></ion-img>
     </ion-card-header>
       
     <ion-card-content>
         <ion-card-title>{{data.title}}</ion-card-title>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+          <span *ngIf="isDetailedView">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
+          </span>
     </ion-card-content>
 </ion-card>
