--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,33 +1,30 @@
-<ion-content>
-  <ion-card class="welcome-card">
-    <ion-card-header>
-      <ion-card-subtitle>Get Started</ion-card-subtitle>
-      <ion-card-title>Login Page</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <p>This is a base login feature with mock data.</p>
-      <ion-button color="primary" (click)="login()">Login</ion-button>
-    </ion-card-content>
-  </ion-card>
-  <ion-list lines="none">
-    <ion-list-header>
-      <ion-label>Resources</ion-label>
-    </ion-list-header>
-    <ion-item href="https://ionicframework.com/docs/">
-      <ion-icon slot="start" color="medium" name="book"></ion-icon>
-      <ion-label>Ionic Documentation</ion-label>
-    </ion-item>
-    <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-      <ion-icon slot="start" color="medium" name="build"></ion-icon>
-      <ion-label>Scaffold Out Your App</ion-label>
-    </ion-item>
-    <ion-item href="https://ionicframework.com/docs/layout/structure">
-      <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-      <ion-label>Change Your App Layout</ion-label>
-    </ion-item>
-    <ion-item href="https://ionicframework.com/docs/theming/basics">
-      <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-      <ion-label>Theme Your App</ion-label>
-    </ion-item>
-  </ion-list>
+<ion-content text-center>
+    <ion-avatar text-center>
+        <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+    </ion-avatar>
+    <ion-title>Sign-In</ion-title>
+  <form [formGroup]="loginFormGroup">
+      <ion-row>
+        <ion-col>
+          <ion-list inset>
+            
+            <ion-item>
+              <ion-input color="primary" type="text" placeholder="Email" name="email" [formControlName]="EMAIL"></ion-input>
+            </ion-item>
+            
+            <ion-item>
+              <ion-input type="password" placeholder="Password" name="password" [formControlName]="PASSWORD"></ion-input>
+            </ion-item>
+            
+          </ion-list>
+        </ion-col>
+      </ion-row>
+      <p>All fields are required!</p>
+      <ion-row>
+        <ion-col class="signup-col">
+          <ion-button color="primary" (click)="login()" [disabled]="!loginFormGroup?.valid">Login</ion-button>
+          <ion-button color="primary">Create New Account</ion-button>
+        </ion-col>
+      </ion-row>
+    </form>
 </ion-content>
