--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,4 +1,9 @@
-.welcome-card ion-img {
-  max-height: 35vh;
-  overflow: hidden;
+ion-avatar{
+  margin: auto;
+  margin-top: 55px;
+  margin-bottom: 45px;
+}
+
+ion-item {
+  border-bottom: 1px solid #464646;
 }
