--- a/src/app/pages/list/list.page.html
+++ b/src/app/pages/list/list.page.html
@@ -17,10 +17,8 @@
   </ion-list>
 
   <ion-infinite-scroll (ionInfinite)="onScroll($event)">
-      <ion-infinite-scroll-content
-        loadingSpinner="bubbles"
-        loadingText="Loading more data...">
-      </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 
 </ion-content>
